tests/hanging_cpt.out

Removing trailing traverses...

Concatenating traverses...

Simplifying network...
cavern: error: Survey not all connected to fixed stations
The following survey stations are not attached to a fixed point:
./hanging_cpt.svx:5: info: 3
