tests/hanging_cpt.svx
; pos=fail
*fix 1 0 0 0
1 2  1 0 0

3 4  1 0 0
3 5  1 0 0
3 6  1 0 0
3 7  1 0 0
4 5  1 0 0
6 7  1 0 0
